--- a/pages/carta.html
+++ b/pages/carta.html
@@ -90,7 +90,7 @@
 
       <!-- Categoría Cachimbas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+        <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="/src/img/carta/recomendaciones/shisha.jpg" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block letras">Cachimbas</p>
         </a>
@@ -106,7 +106,7 @@
 
       <!-- Categoría Cervezas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+        <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="/src/img/carta/recomendaciones/mojito.jpg" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block letras">Cervezas</p>
         </a>
