fondo mejor resolucion

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -24,7 +24,7 @@
       }
 
        main {
-           background-image: url('/src/img/fondos/caiman-fondo.jpeg');
+           background-image: url('/src/img/fondos/fondo-carta.jpg');
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat;
