Modificadas rutas de las imagenes para que aparezcan correctamente en git pages

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -19,17 +19,13 @@
           }
       }
 
-      .letras {
-          color: white;
-      }
-
-       main {
-           background-image: url('/src/img/fondos/fondo-carta.jpg');
+      .bgimg-carta {
           background-size: cover;
-          background-position: center;
+          background-image: url('../src/img/fondos/fondo-carta.jpg');
           background-repeat: no-repeat;
+          height: 100vh;
+          backdrop-filter: blur(5px);
       }
-
   </style>
 </head>
 <body class="bg-grey-500">
@@ -39,13 +35,13 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="../index.html"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        <a href="../index.html"><img src="src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
         <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
         <a href="#" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
+        <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>3
         <a href="ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
         <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
         <a href="about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
@@ -72,7 +68,7 @@
     <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
-<main class="pt-24 flex flex-col min-h-screen"> <!-- Agregue padding-top para compensar el header fijo -->
+<main class="pt-24 flex flex-col min-h-screen bgimg-carta"> <!-- Agregue padding-top para compensar el header fijo -->
   <!-- Contenido de la página -->
   <div class="container mx-auto flex-1 p-8 flex justify-center items-center">
 
@@ -84,15 +80,15 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Combinados</p>
+          <p class="text-sm font-semibold mt-2 md:block">Combinados</p>
         </a>
       </div>
 
       <!-- Categoría Cachimbas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="/src/img/carta/recomendaciones/shisha.jpg" data-description=""> <!--TODO RELLENAR LOS DATA-->
+        <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Cachimbas</p>
+          <p class="text-sm font-semibold mt-2 md:block">Cachimbas</p>
         </a>
       </div>
 
@@ -100,15 +96,15 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Cócteles</p>
+          <p class="text-sm font-semibold mt-2 md:block">Cócteles</p>
         </a>
       </div>
 
       <!-- Categoría Cervezas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="/src/img/carta/recomendaciones/mojito.jpg" data-description=""> <!--TODO RELLENAR LOS DATA-->
+        <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Cervezas</p>
+          <p class="text-sm font-semibold mt-2 md:block">Cervezas</p>
         </a>
       </div>
 
@@ -116,7 +112,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Vinos</p>
+          <p class="text-sm font-semibold mt-2 md:block">Vinos</p>
         </a>
       </div>
 
@@ -124,7 +120,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Refrescos</p>
+          <p class="text-sm font-semibold mt-2 md:block">Refrescos</p>
         </a>
       </div>
 
@@ -132,7 +128,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block letras">Batidos</p>
+          <p class="text-sm font-semibold mt-2 md:block">Batidos</p>
         </a>
       </div>
     </div>
