Modificadas rutas de las imagenes para que aparezcan correctamente en git pages. AHORA SI CORRECTAMENTE

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -12,7 +12,7 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="../index.html"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        <a href="../index.html"><img src="../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
