--- a/pages/carta.html
+++ b/pages/carta.html
@@ -35,13 +35,13 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="../index.html"><img src="src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        <a href="../index.html"><img src="../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
         <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
         <a href="#" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>3
+        <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
         <a href="ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
         <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
         <a href="about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
