--- a/pages/cartas/cachimbas.html
+++ b/pages/cartas/cachimbas.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="#"><img src="src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%"
+        <a href="#"><img src="../../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%"
                          width="35%"></a>
       </div>
       <!--Elementos del menú-->
