Terminado Donde Estamos, responsividad completa, navbar arreglado.

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <title>El Caiman Club</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Orbitron&family=Overpass+Mono:wght@500&display=swap" rel="stylesheet">
   <style>
-
+      * {
+        font-family: 'Orbitron', sans-serif;
+      }
       .recomendacion {
           width: 274.65px; /* Ancho fijo */
           height: 330px; /* Alto fijo */
@@ -77,7 +82,7 @@
       <!-- Ajuste las clases aquí para pantallas grandes -->
 
       <!-- Categoría Combinados -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Combinados</p>
@@ -85,7 +90,7 @@
       </div>
 
       <!-- Categoría Cachimbas -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Cachimbas</p>
@@ -93,7 +98,7 @@
       </div>
 
       <!-- Categoría Cócteles -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Cócteles</p>
@@ -101,7 +106,7 @@
       </div>
 
       <!-- Categoría Cervezas -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Cervezas</p>
@@ -109,7 +114,7 @@
       </div>
 
       <!-- Categoría Vinos -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Vinos</p>
@@ -117,7 +122,7 @@
       </div>
 
       <!-- Categoría Refrescos -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Refrescos</p>
@@ -125,7 +130,7 @@
       </div>
 
       <!-- Categoría Batidos -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
+      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 md:block">Batidos</p>
