Arreglado navbar en páginas principales

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>El Caiman Club</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Orbitron&family=Overpass+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-black">
 <header class="fixed w-full z-10">
   <!-- Navbar -->
   <nav class="bg-white p-4">
@@ -21,7 +26,7 @@
         <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
         <a href="ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
         <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Nosotros</a>
+        <a href="about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
         <a href="shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
       </div>
 
@@ -37,11 +42,12 @@
 
   <!-- Menú desplegable para dispositivos móviles -->
   <div id="menu" class="md:hidden hidden bg-white p-4">
+    <a href="../index.html" class="block text-pink-600 hover:text-pink-900 mb-2">Inicio</a>
     <a href="carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
     <a href="reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
     <a href="ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
     <a href="donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
+    <a href="about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
     <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
