--- a/pages/donde-estamos.html
+++ b/pages/donde-estamos.html
@@ -22,7 +22,7 @@
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
         <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Carta</a>
+        <a href="carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
         <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
         <a href="ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
         <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
@@ -49,8 +49,8 @@
     <a href="about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
     <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
-        
-  <main class="pt-24 flex flex-col min-h-screen">
+</header>      
+  <main class="pt-24 flex flex-col min-h-screen md:mt-0">
     <div class="max-w-full mx-auto xl:mx-60 lg:mx-36 md:mx-10 m-5 md:m-30 bg-white shadow-md rounded-md p-4 md:p-8 neon-bg">
       <h1 class="text-2xl md:text-4xl font-bold mb-4 md:mb-6 neon-text text-center md:mb-12">
         ¿Dónde estamos?
