--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -2,22 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Haz tu reserva!</title>
-  <!-- Conexion al CDN de TailwindCSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <!-- Importamos sweetalert2 -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <title>El Caiman Club</title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Orbitron&family=Overpass+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
-<body class="font-sans bg-black">
+<body class="bg-black">
+<header class="fixed w-full z-10">
   <!-- Navbar -->
   <nav class="bg-white p-4">
     <div class="container mx-auto flex justify-between items-center bg-white">
-      <!-- Logo -->
+      <!--Logo -->
       <div>
-        <a href="index.html"><img src="../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        <a href="../index.html"><img src="../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
       </div>
-      <!-- Elementos del menú -->
+      <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
         <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
         <a href="carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
@@ -48,7 +50,7 @@
     <a href="about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
     <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
-
+</header>
   <main class="pt-18">
     <!-- Formulario de reserva -->
     <div class=" container mx-auto flex justify-center items-center h-screen pt-10" id="form-reserva">
