--- a/pages/donde-estamos.html
+++ b/pages/donde-estamos.html
@@ -42,7 +42,7 @@
 
   <!-- Menú desplegable para dispositivos móviles -->
   <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+    <a href="carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
     <a href="reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
     <a href="ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
     <a href="donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
