--- a/pages/cartas/batidos.html
+++ b/pages/cartas/batidos.html
@@ -2,51 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>El Caiman Club</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>El Caiman Club</title>
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="../../css/carta.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Orbitron&family=Overpass+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
-<body >
-<header>
-  <!-- Navbar -->
-  <nav class="bg-white p-4">
-    <div class="container mx-auto flex justify-between items-center bg-white">
-      <!--Logo -->
-      <div>
-        <a href="#"><img src="../../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%"
-        width="35%"></a>
+<body class="bg-black">
+  <header class="fixed w-full z-10 mt-0">
+    <!-- Navbar -->
+    <nav class="bg-white p-4 ">
+      <div class="container mx-auto flex justify-between items-center bg-white">
+        <!--Logo -->
+        <div>
+          <a href="../index.html"><img src="../../src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        </div>
+        <!--Elementos del menú-->
+        <div class="hidden md:flex space-x-4">
+          <a href="../../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
+          <a href="../carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
+          <a href="../reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
+          <a href="../ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
+          <a href="../donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
+          <a href="../about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
+          <a href="../shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
+        </div>
+  
+        <div class="md:hidden">
+          <button id="menu-toggle" class="text-pink-600 hover:text-pink-900">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+          </button>
+        </div>
       </div>
-      <!--Elementos del menú-->
-      <div class="hidden md:flex space-x-4">
-        <a href="../../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
-        <a href="../carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="../reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
-        <a href="../ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
-        <a href="../donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
-        <a href="../about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
-        <a href="../shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
-      </div>
-
-      <div class="md:hidden">
-        <button id="menu-toggle" class="text-pink-600 hover:text-pink-900">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-          </svg>
-        </button>
-      </div>
+    </nav>
+  
+    <!-- Menú desplegable para dispositivos móviles -->
+    <div id="menu" class="md:hidden hidden bg-white p-4">
+      <a href="../../index.html" class="block text-pink-600 hover:text-pink-900 mb-2">Inicio</a>
+      <a href="../carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+      <a href="../reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
+      <a href="../ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
+      <a href="../donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
+      <a href="../about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
+      <a href="../shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
     </div>
-  </nav>
-
-  <!-- Menú desplegable para dispositivos móviles -->
-  <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="../carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
-    <a href="../reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
-    <a href="../ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
-    <a href="../donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
-    <a href="../about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
-    <a href="../shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
-  </div>
-</header>
+  </header>  
 <main>
   <div class="carta">
     <div class="titulo-carta"><b>BATIDOS</b></div>
