--- a/pages/carta.html
+++ b/pages/carta.html
@@ -7,7 +7,9 @@
   <title>El Caiman Club</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Orbitron&family=Overpass+Mono:wght@500&display=swap" rel="stylesheet">
+
   <style>
       * {
         font-family: 'Orbitron', sans-serif;
@@ -15,7 +17,6 @@
       .recomendacion {
           width: 274.65px; /* Ancho fijo */
           height: 330px; /* Alto fijo */
-          /* ... Otros estilos ... */
       }
 
       @media (max-width: 768px) {
@@ -85,7 +86,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Combinados</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Combinados</p>
         </a>
       </div>
 
@@ -93,7 +94,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Cachimbas</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Cachimbas</p>
         </a>
       </div>
 
@@ -101,7 +102,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Cócteles</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Cócteles</p>
         </a>
       </div>
 
@@ -109,7 +110,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Cervezas</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Cervezas</p>
         </a>
       </div>
 
@@ -117,7 +118,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Vinos</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Vinos</p>
         </a>
       </div>
 
@@ -125,7 +126,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Refrescos</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Refrescos</p>
         </a>
       </div>
 
@@ -133,7 +134,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Batidos</p>
+          <p class="text-xl font-semibold mt-2 md:block neon-text">Batidos</p>
         </a>
       </div>
     </div>
