creacion de ofertas

--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/ofertas.css">
 </head>
-<body>
+<body class="bg-black">
 <header class="fixed w-full z-10">
   <!-- Navbar -->
   <nav class="bg-white p-4">
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="../index.html"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        <a href="../index.html"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club"
+                                     height="25%" width="35%"></a>
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
@@ -46,7 +48,19 @@
   </div>
 </header>
 
-<main>
+<main class="mt-20">
+  <div class="p-6 m-4 rounded-lg border-4 border-pink-600 text-white">
+    <h2 class="text-pink-500 text-2xl font-bold mb-3">COPAS a 5€ TODO NOVIEMBRE</h2>
+    <p>Disfruta de nuestras exclusivas copas a un precio especial durante todo noviembre.</p>
+  </div>
+
+  <div class="bg-black text-white p-6 m-4 rounded-lg border-4 border-pink-600 neon-effect">
+    <div class="oferta">
+      <h2 class="titulo-oferta">COPAS a 5€ TODO NOVIEMBRE</h2>
+      <img src="ruta/a/imagen-de-copas.jpg" alt="Copas a 5€">
+      <p>Disfruta de nuestras copas a un precio especial durante todo noviembre.</p>
+    </div>
+  </div>
 
 </main>
 
