Solucionado bug junte de letras en dispos móviles: FIXED

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -86,7 +86,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Combinados</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Combinados</p>
         </a>
       </div>
 
@@ -94,7 +94,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Cachimbas</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cachimbas</p>
         </a>
       </div>
 
@@ -102,7 +102,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Cócteles</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cócteles</p>
         </a>
       </div>
 
@@ -110,7 +110,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Cervezas</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cervezas</p>
         </a>
       </div>
 
@@ -118,7 +118,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Vinos</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Vinos</p>
         </a>
       </div>
 
@@ -126,7 +126,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Refrescos</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Refrescos</p>
         </a>
       </div>
 
@@ -134,7 +134,7 @@
       <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-sm text-sm font-semibold mt-2 md:block neon-text">Batidos</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Batidos</p>
         </a>
       </div>
     </div>
