fix img sizes and letter spacing

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -83,7 +83,7 @@
       <!-- Ajuste las clases aquí para pantallas grandes -->
 
       <!-- Categoría Combinados -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4"> <!-- Añade margen en la parte inferior -->
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Combinados</p>
@@ -91,7 +91,7 @@
       </div>
 
       <!-- Categoría Cachimbas -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cachimbas</p>
@@ -99,7 +99,7 @@
       </div>
 
       <!-- Categoría Cócteles -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cócteles</p>
@@ -107,7 +107,7 @@
       </div>
 
       <!-- Categoría Cervezas -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cervezas</p>
@@ -115,7 +115,7 @@
       </div>
 
       <!-- Categoría Vinos -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Vinos</p>
@@ -123,7 +123,7 @@
       </div>
 
       <!-- Categoría Refrescos -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Refrescos</p>
@@ -131,7 +131,7 @@
       </div>
 
       <!-- Categoría Batidos -->
-      <div class="block lg:w-36 lg:h-36 md:w-28 md:h-28 w-24 h-24 text-center mb-4">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Batidos</p>
