--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>El Caiman Club</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../css/carta.css">
   <link rel="stylesheet" href="../../css/style.css">
+  <title>El Caiman Club</title>
 </head>
 <body class="bg-gray-200">
 <header>
