--- a/pages/cartas/vinos.html
+++ b/pages/cartas/vinos.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>El Caiman Club</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../css/carta.css">
+  <title>El Caiman Club</title>
 </head>
 <body>
 <header>
