--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img src="../src/img/logo/caiman-logo.png" class="w-auto h-12" alt="El Caiman Club"></a>
         </div>
         <!--Elementos del menú-->
-        <div class="hidden md:flex space-x-4">
+        <div class="hidden lg:flex space-x-4">
             <a href="#" class="text-pink-600 hover:text-pink-900">Inicio</a>
             <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
             <a href="pages/reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
@@ -26,7 +26,7 @@
             <a href="pages/shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
         </div>
 
-        <div class="md:hidden">
+        <div class="lg:hidden">
             <button id="menu-toggle" class="text-pink-600 hover:text-pink-900">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
@@ -37,7 +37,7 @@
 </nav>
 
 <!-- Menú desplegable para dispositivos móviles -->
-<div id="menu" class="md:hidden hidden bg-white p-4">
+<div id="menu" class="lg:hidden hidden bg-white p-4">
     <a href="pages/carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
     <a href="pages/reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
     <a href="pages/ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
