--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
         <!--Logo -->
         <div>
-            <a href="index.html"><img src="../src/img/logo/caiman-logo.png" class="w-auto h-12" alt="El Caiman Club"></a>
+            <a href="index.html"><img src="src/img/logo/caiman-logo.png" class="w-auto h-12" alt="El Caiman Club"></a>
         </div>
         <!--Elementos del menú-->
         <div class="hidden lg:flex space-x-4">
