--- a/pages/cartas/cervezas.html
+++ b/pages/cartas/cervezas.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="#"><img src="../src/img/logo/caiman-logo.png" class="w-auto h-12" alt="El Caiman Club"></a>
+        <a href="#"><img src="../../src/img/logo/caiman-logo.png" class="w-auto h-12" alt="El Caiman Club"></a>
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
