--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Orbitron&family=Overpass+Mono:wght@500&display=swap" rel="stylesheet">
+  <style>
+
+
+  </style>
 </head>
 <body class="bg-black">
   <header class="fixed w-full z-10">
@@ -53,38 +57,38 @@
   </header>
   <main class="pt-18">
     <!-- Formulario de reserva -->
-    <div class=" container mx-auto flex justify-center items-center h-screen pt-10" id="form-reserva">
+    <div class="container mx-auto flex pt-36 justify-center items-center h-screen" id="form-reserva">
       <form id="formularioReservas" class="neon-bg max-w-md w-full md:w-2/3 lg:w-1/2 xl:w-1/3 p-8 bg-white rounded-lg shadow-lg">
-        <h2 class="text-2xl font-semibold mb-6">Información de Reserva</h2>
+        <h1 class="text-2xl md:text1xl font-bold mb-4 md:mb-6 neon-text text-center md:mb-12">Información de Reserva</h2>
 
         <div class="mb-4">
           <label for="nombre" class="block text-sm font-medium text-gray-600">Nombre</label>
-          <input type="text" id="nombre" name="nombre" class="form-input w-full">
+          <input type="text" id="nombre" name="nombre" class="form-input w-full bg-pink-100">
         </div>
 
         <div class="mb-4">
           <label for="telefono" class="block text-sm font-medium text-gray-600">Teléfono</label>
-          <input type="number" id="telefono" name="telefono" class="form-input w-full">
+          <input type="number" id="telefono" name="telefono" class="form-input w-full bg-pink-100">
         </div>
 
         <div class="mb-4">
           <label for="email" class="block text-sm font-medium text-gray-600">Email</label>
-          <input type="email" id="email" name="email" class="form-input w-full">
+          <input type="email" id="email" name="email" class="form-input w-full bg-pink-100">
         </div>
 
         <div class="mb-4">
           <label for="fecha" class="block text-sm font-medium text-gray-600">Fecha</label>
-          <input type="date" id="fecha" name="fecha" class="form-input w-full">
+          <input type="date" id="fecha" name="fecha" class="form-input w-full bg-pink-100">
         </div>
 
         <div class="mb-4">
           <label for="hora" class="block text-sm font-medium text-gray-600">Hora</label>
-          <input type="time" id="hora" name="hora" class="form-input w-full">
+          <input type="time" id="hora" name="hora" class="form-input w-full bg-pink-100">
         </div>
 
         <div class="mb-4">
           <label for="numComensales" class="block text-sm font-medium text-gray-600">Número de Comensales (hasta 12)</label>
-          <input type="range" id="numComensales" name="numComensales" min="1" max="12" class="form-range w-full bg-pink-600 text-white">
+          <input type="range" id="numComensales" name="numComensales" min="1" max="12" class="rangestyle form-range w-full bg-pink-100 text-white">
           <p class="text-center text-pink-600 mt-2" id="numComensalesValue">Número de Comensales: 1</p>
         </div>
 
